--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
     firebase_core: ^0.5.3
     cloud_firestore: ^0.14.3+1
     firebase_auth: ^0.18.3+1
+    provider: ^4.3.2+3
 
 dev_dependencies:
     flutter_test:
