--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     cloud_firestore: ^0.14.3+1
     firebase_auth: ^0.18.3+1
     provider: ^4.3.2+3
+    flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
     flutter_test:
