--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     provider: ^4.3.2+3
     flutter_spinkit: ^4.1.2+1
     progress_dialog: ^1.2.4
+    progress_indicators: ^0.1.5
 
 dev_dependencies:
     flutter_test:
